apps/observability-system/alertmanager/config/alertmanager-discord-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
  namespace: observability-system
  labels:
    app.kubernetes.io/name: alertmanager-discord
    app.kubernetes.io/part-of: alertmanager-discord
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: alertmanager-discord
  ports:
    - name: http
      port: 9094
      targetPort: http
      protocol: TCP
